# Flow-Factory

./: .gitignore  README.md  project.toml  pyproject.toml  setup.py  temp.ipynb
config/: flux_t2is.yaml
config/accelerate_configs/: fsdp2.yaml  fsdp_full_shard.yaml  fsdp_grad_op_shard.yaml
config/full/: flux.yaml  flux2.yaml  qwen_image.yaml  z_image_turbo.yaml
config/lora/: flux.yaml  flux2.yaml  flux_init.yaml  qwen_image.yaml  z_image_turbo.yaml
dataset/t2is/: train.jsonl
examples/grpo/full/: flux.yaml  flux1.yaml  flux1_kontext.yaml  flux2.yaml  flux2_i2i.yaml  flux2_t2i.yaml  qwen_image.yaml  qwen_image_edit_plus.yaml  wan21_i2v.yaml  wan21_t2v.yaml  wan22_i2v.yaml  wan22_t2v.yaml  z_image_turbo.yaml
examples/grpo/lora/: flux.yaml  flux1_kontext.yaml  flux2.yaml  flux2_i2i.yaml  flux2_t2i.yaml  qwen_image.yaml  qwen_image_edit_plus.yaml  wan21_i2v.yaml  wan22_i2v.yaml  wan22_t2v.yaml  wan_t2v.yaml  z_image_turbo.yaml
src/flow_factory/: cli.py  train.py
src/flow_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/flow_factory/data_utils/: dataset.py  loader.py  sampler.py
src/flow_factory/ema/: __init__.py  ema.py
src/flow_factory/hparams/: __init__.py  args.py  data_args.py  log_args.py  model_args.py  reward_args.py  training_args.py
src/flow_factory/logger/: __init__.py  abc.py  formatting.py  loader.py  registry.py  swanlab.py  wandb.py
src/flow_factory/models/: __init__.py  adapter.py  flux1.py  loader.py  qwenimage.py  registry.py  z_image.py
src/flow_factory/models/flux/: flux1.py  flux1_init.py  flux1_kontext.py  flux2.py
src/flow_factory/models/qwen_image/: qwen_image.py  qwen_image_edit_plus.py
src/flow_factory/models/wan/: wan2_i2v.py  wan2_t2v.py  wan2_v2v.py
src/flow_factory/models/z_image/: z_image.py
src/flow_factory/rewards/: __init__.py  my_reward.py  pick_score.py  registry.py
src/flow_factory/scheduler/: __init__.py  abc.py  flow_match_euler_discrete.py  flow_matching.py  loader.py  unipc_multistep.py
src/flow_factory/trainers/: __init__.py  grpo.py  grpo_trainer.py  loader.py  nft.py  registry.py  trainer.py
src/flow_factory/utils/: base.py
